gateway-multizone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: route1
  namespace: kuma-app
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
        - path: /route1
          pathType: Prefix
          backend:
            service:
              name: magnanimo
              port:
                number: 4000
